Fix: class names

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-10 offset-1 offst-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
                                 <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reason-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
                                     I'm a skilled full stack developer with a passion for problem solving and a love for learning.
                                     I have a wealth of diverse life and technical experience that I bring to every project.
@@ -66,13 +66,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 offset-1 offest-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
                                 <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reason-heading uppercase">How do i do it?</h4>
+                                <h4 class="three-reasons-heading uppercase">How do i do it?</h4>
                                 <p>
                                     I follow a simple process of research, design, develop, test, and deploy.
                                     I'm a big fan of agile development and I'm always looking for ways to improve my process.
@@ -80,13 +80,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 offset-1 offest-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
                                 <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reason-heading uppercase">Why hire me?</h4>
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
                                     I'm a hard worker with a passion for learning and a love for problem solving.
                                     I'm a team player who is always looking for ways to improve my skills and the skills of those around me.
