--- a/resume.html
+++ b/resume.html
@@ -48,72 +48,25 @@
             <div class="col-md-4 bg-color-personal-info section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Personal Info</h3>
+                        <h3 class="section-heading uppercase">Work History</h3>
                     </div>
                 </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Name:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            Rosie Odenkirk
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Address:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            17 Riverdale, Catskills, NY USA
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Phone:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            555 102 1292
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Email:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            rosie.odinkirk@gmail.com
-                        </p>
-                    </div>
-                </div>
+                
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
+                        <h3 class="section-heading uppercase">My Skills</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
                                     I'm a skilled full stack developer with a passion for problem solving and a love for learning.
                                     I have a wealth of diverse life and technical experience that I bring to every project.
@@ -124,27 +77,13 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">How do i do it?</h4>
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
                                     I follow a simple process of research, design, develop, test, and deploy.
                                     I'm a big fan of agile development and I'm always looking for ways to improve my process.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                                <p>
-                                    I'm a hard worker with a passion for learning and a love for problem solving.
-                                    I'm a team player who is always looking for ways to improve my skills and the skills of those around me.
                                 </p>
                             </div>
                         </div>
