Add google maps api and maps.js

--- a/resume.html
+++ b/resume.html
@@ -55,11 +55,11 @@
                 <div class="history-items">
                     <div class="timeline-item" data-dates="02/1998 - 04/2004">
                         <h4>National College of Art and Design (NCAD)</h4>
-                        <p>Sculptor in Residence</p>
+                        <p>Sculptor in residence</p>
                     </div>
                     <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Director</h4>
-                        <p>Junior Enbalmer</p>
+                        <h4>Fisher and Diaz Funeral Directors</h4>
+                        <p>Junior Embalmer</p>
                     </div>
                     <div class="timeline-item" data-dates="06/2008 - 06/2011">
                         <h4>Phantom Design Inc. Dublin</h4>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="timeline-item" data-dates="06/2011 - Present">
                         <h4>Hooli Inc. Silicon Valley</h4>
-                        <p>Full Stack Developer</p>
+                        <p>Full Stack Web Developer</p>
                     </div>
                 </div>
             </div>
@@ -146,17 +146,18 @@
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
-                <h5 class="uppercase general-sub">About Me</h5>
-                <p class="inline-block">Full stack Web Developer. Skill in everything from HTML to heroku.
-                    The capacity to learn and adapt to new technologies. A passion for problem solving and a love for learning.
+                <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                    Need a printiable version of my resume? Download it here.
+                    Need a printable version of my CV? Download it here.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
-                        <i class="fa fa-download" aria-hidden="true"><span class="sr-only">Download Link.</span></i>
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                        <span class="sr-only">Download link.</span>
                     </a>
                 </p>
             </div>
@@ -164,50 +165,42 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="https://github.com" target="_blank">
-                            <i class="fa fa-github" aria-hidden="true">
-                                <span class="sr-only">GitHub</span>
-                            </i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://facebook.com" target="_blank">
-                            <i class="fa fa-facebook" aria-hidden="true">
-                                <span class="sr-only">Facebook</span>
-                            </i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com" target="_blank">
-                            <i class="fa fa-twitter" aria-hidden="true">
-                                <span class="sr-only">Twitter</span>
-                            </i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://linkedin.com" target="_blank">
-                            <i class="fa fa-linkedin" aria-hidden="true">
-                                <span class="sr-only">LinkedIn</span>
-                            </i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://instagram.com" target="_blank">
-                            <i class="fa fa-instagram" aria-hidden="true">
-                                <span class="sr-only">Instagram</span>
-                            </i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://youtube.com" target="_blank">
-                            <i class="fa fa-youtube" aria-hidden="true">
-                                <span class="sr-only">YouTube</span>
-                            </i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
                         </a>
                     </li>
-                    
                 </ul>
-                <p></p>
             </div>
         </div>
     </footer>
